--- a/Admin/MainAdminView.master
+++ b/Admin/MainAdminView.master
@@ -14,6 +14,43 @@
     <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="../Content/Assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
+     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?&sensor=false&libraries=places"></script>
+
+    <script type="text/javascript">
+        google.maps.event.addDomListener(window, 'load', function () {
+            var options = {
+                types: ['(cities)']
+            };
+
+            var places = new google.maps.places.Autocomplete(document.getElementById('MainContent_TBLocalidadeInserida'), options);
+
+            google.maps.event.addListener(places, 'place_changed', function () {
+                var place = places.getPlace();
+
+                //var address = place.formatted_address;
+
+                var address = place.address_components;
+                console.log("DEBUG:", address);
+
+                var localidade = "",
+                    pais       = "";
+                
+                for (var i in address) {
+                    if (address[i].types[0] == "locality") localidade = address[i].long_name;
+                    if (address[i].types[0] == "country") pais = address[i].long_name;
+                }
+
+                console.log("PAIS: " + pais);
+                console.log("LOCALIDADE: " + localidade);
+
+                document.getElementById("MainContent_TBLocalidade").value = localidade;
+                document.getElementById("MainContent_TBPais").value = pais;
+
+            });
+        });
+    </script>
+
+
 </head>
 <body>
     <form runat="server">
