--- a/Admin/MainAdminView.master
+++ b/Admin/MainAdminView.master
@@ -13,6 +13,7 @@
     </asp:PlaceHolder>
     <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="../Content/Assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
 
      <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?&sensor=false&libraries=places"></script>
 
@@ -158,5 +159,14 @@
             </footer>
         </div>
     </form>
+
+<script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+<script>
+         $(function () {
+             $(".datepicker").datepicker({
+                 dateFormat: "yy-mm-dd"
+             });
+         });
+</script>
 </body>
 </html>
