--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -4053,7 +4053,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
                 border-color: #eeeeee #eeeeee #dddddd;
             }
 
-        .nav-tabs > li.active > a,
+        /*.nav-tabs > li.active > a,
         .nav-tabs > li.active > a:hover,
         .nav-tabs > li.active > a:focus {
             color: #555555;
@@ -4062,6 +4062,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
             border: 1px solid #dddddd;
             border-bottom-color: transparent;
         }
+    */
 
     .nav-tabs.nav-justified {
         width: 100%;
